--- a/.babelrc
+++ b/.babelrc
@@ -1,25 +1,17 @@
 {
   "presets": [
     [
-      "es2015",
+      "@babel/preset-env",
       {
         "modules": false
       }
-    ],
-    "stage-2"
+    ]
   ],
-  "plugins": [
-    "external-helpers"
-  ],
+  "plugins": ["@babel/plugin-external-helpers", "@babel/plugin-proposal-class-properties"],
   "env": {
     "test": {
-      "presets": [
-        "es2015",
-        "stage-2"
-      ],
-      "plugins": [
-        "transform-runtime"
-      ]
+      "presets": ["@babel/preset-env"],
+      "plugins": ["@babel/plugin-transform-runtime", "@babel/plugin-proposal-class-properties"]
     }
   }
 }
