--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "main": "dist/mollie.js",
   "engines": {
-    "node" : ">=4.8"
+    "node": ">=4.8"
   },
   "scripts": {
     "prepublish": "yarn run build",
@@ -41,27 +41,27 @@
     "qs": "^6.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/preset-env": "^7.4.1",
+    "@mollie/eslint-config-node": "0.0.1-alpha.3",
     "axios-mock-adapter": "^1.8.1",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^19.0.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.5.0",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
-    "@mollie/eslint-config-node": "0.0.1-alpha.3",
     "eslint-import-resolver-node": "^0.3.0",
     "eslint-plugin-import": "^2.2.0",
     "husky": "^0.13.4",
-    "jest-cli": "^19.0.2",
+    "jest": "^24.5.0",
     "lint-staged": "^3.4.1",
     "prettier": "^1.14.0",
     "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-includepaths": "^0.2.2",
     "rollup-plugin-json": "^2.1.1",
     "rollup-plugin-url": "^1.1.0"
